feat: Alpha-Beta-Pruning