@@ -3,5 +3,7 @@
   :url "http://example.com/FIXME"
   :license {:name "EPL-2.0 OR GPL-2.0-or-later WITH Classpath-exception-2.0"
             :url "https://www.eclipse.org/legal/epl-2.0/"}
-  :dependencies [[org.clojure/clojure "1.10.3"] [org.clojure/math.combinatorics "0.1.6"]]
-  :repl-options {:init-ns lambda-chess.core})
+  :dependencies [[org.clojure/clojure "1.10.3"] [org.clojure/math.combinatorics "0.1.6"] [com.clojure-goes-fast/clj-async-profiler "1.0.0-alpha1"]
+                 ]
+  :repl-options {:init-ns lambda-chess.core}
+  :jvm-opts ["-Djdk.attach.allowAttachSelf"])
